[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-gigachat>=0.3.12",
    "langchain-ollama>=0.3.9",
    "langgraph>=0.6.8",
    "lxml>=6.0.2",
]
